[package]
name = "echo-server"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1"
http-body-util = { version = "0.1.0"}
anyhow = { version = "1.0.80"}
log = "0.4.20"
env_logger= "0.11.2"
fern = "0.6"
humantime = "2.1.0"